--- a/Pubs.Web/Views/Shared/_Layout.cshtml
+++ b/Pubs.Web/Views/Shared/_Layout.cshtml
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
-    <link href="~/css/site.css" rel="stylesheet" />
     <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+
+    <link href="~/css/site.css" rel="stylesheet" />
 </head>
 <body>
     <div><h1>@ViewBag.Title</h1></div>
