Authors view: Change to optionally display Titles

--- a/Pubs.Web/Views/Authors/Index.cshtml
+++ b/Pubs.Web/Views/Authors/Index.cshtml
@@ -7,8 +7,8 @@
 
 <div class="container-fluid">
     <div class="form-group row">
-        <button type="button" class="col-sm-3 btn btn-primary" id="allAuthorsButton">All Authors</button>
-        <label for="authorSelect" class="col-sm-3 ">Select author:</label>
+        <button type="button" class="col-sm-2 btn btn-primary" id="allAuthorsButton">All Authors</button>
+        <label for="authorSelect" class="col-sm-2" style="text-align: right;">Select author:</label>
         <select class="form-control col-sm-6" id="authorSelect"></select>
     </div>
     <div class="form-check-inline row">
