Change shared layout and individual page layouts.
Use more Bootstrap 4 to layout the page controls.

The page builds using JavaScript will be for the next release.

--- a/Pubs.Web/Views/Authors/Index.cshtml
+++ b/Pubs.Web/Views/Authors/Index.cshtml
@@ -7,19 +7,18 @@
 
 <div class="container-fluid">
     <div class="form-group row">
-        <button type="button" class="col-sm-2 btn btn-primary" id="allAuthorsButton">All Authors</button>
-        <label for="authorSelect" class="col-sm-2" style="text-align: right;">Select author:</label>
-        <select class="form-control col-sm-6" id="authorSelect"></select>
+        <button type="button" class="col-2 btn btn-primary" id="allAuthorsButton">All Authors</button>
+        <label for="authorSelect" class="col-2" style="text-align: right;">Select author:</label>
+        <select class="form-control col-6" id="authorSelect"></select>
     </div>
     <div class="form-check-inline row">
         <label class="form-check-label">
             <input id="includeTitles" type="checkbox" class="form-check-input" value="">Include Titles
         </label>
-
     </div>
 
     <br />
 
-    <div id="authors" style="width: 10in;"></div>
+    <div id="authors"></div>
 
 </div>
