--- a/Pubs.Web/Views/Shared/_Layout.cshtml
+++ b/Pubs.Web/Views/Shared/_Layout.cshtml
@@ -12,15 +12,15 @@
     <link href="~/css/site.css" rel="stylesheet" />
 </head>
 <body>
-    <div><h1>@ViewBag.Title</h1></div>
+    <div><h3 class="p-2 bg-primary text-white text-center">@ViewBag.Title</h3></div>
     <div style="float:left; width: 1.5in;">
         <b>
-            <a href="/authors">Authors</a><br />
-            <a href="/publishers">Publishers</a><br />
-            <a href="/titles">Titles</a><br />
+            <a class="btn btn-primary btn-block text-white" asp-controller="Authors"    asp-action="Index">Authors</a><br />
+            <a class="btn btn-primary btn-block text-white" asp-controller="Publishers" asp-action="Index">Publishers</a><br />
+            <a class="btn btn-primary btn-block text-white" asp-controller="Titles"     asp-action="Index">Titles</a><br />
         </b>
     </div>
-    <div style="float:left; width: 10in;">
+    <div style="float:left; width: 80%;" class="p-2">
         @RenderBody()
     </div>
 </body>
