Primarily Publication changes, a few for Authors and Titles
Add an Include Publisher checkbox to Titles page.
Remove most console.log statements in Authors.js, except for error paths.
Redesign Publishers.js to fully use Bootstrap4 and include HTML for titles if  Include Titles checkbox is checked.

--- a/Pubs.Web/Views/Titles/Index.cshtml
+++ b/Pubs.Web/Views/Titles/Index.cshtml
@@ -14,6 +14,8 @@
     <div class="form-check-inline row">
         <label class="form-check-label">
             <input id="includeAuthors" type="checkbox" class="form-check-input" value="">Include Authors
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <input id="includePublisher" type="checkbox" class="form-check-input" value="">Include Publisher
         </label>
     </div>
 
